## Process this file with automake to create Makefile.in

lib_LTLIBRARIES = libHYPRE_lapack.la
libHYPRE_lapack_la_SOURCES = $(FILES)
libHYPRE_lapack_la_LDFLAGS = -avoid-version

#
FILES = \
 dgelq2.c\
 dgelqf.c\
 dgels.c\
 dgeqr2.c\
 dgeqrf.c\
 dlabad.c\
 dlae2.c\
 dlaev2.c\
 dlange.c\
 dlanst.c\
 dlansy.c\
 dlapy2.c\
 dlarf.c\
 dlarfb.c\
 dlarfg.c\
 dlarft.c\
 dlartg.c\
 dlascl.c\
 dlaset.c\
 dlasr.c\
 dlasrt.c\
 dlassq.c\
 dlatrd.c\
 dorg2l.c\
 dorg2r.c\
 dorgql.c\
 dorgqr.c\
 dorgtr.c\
 dorm2r.c\
 dorml2.c\
 dormlq.c\
 dormqr.c\
 dpotf2.c\
 dpotrf.c\
 dpotrs.c\
 dsteqr.c\
 dsterf.c\
 dsyev.c\
 dsygs2.c\
 dsygst.c\
 dsygv.c\
 dsytd2.c\
 dsytrd.c\
 ilaenv.c\
 lapack_utils.c\
 f2c.h\
 hypre_lapack.h
